2013-11-19 Evgeny V. Kokovikhin

	* core/Form/Form.class.php core/Form/FormCollection.class.php 
	test/core/FormTest.class.php: FormCollection introduced. See usage examples in tests.§ 

2013-11-01 Evgeny V. Kokovikhin
	
	* core/Form/Primitives/PrimitiveIdentifierList.class.php: added ability 
	to ignore wrong values in list of identifier

2013-10-28 Evgeny V. Kokovikhin
	
	*  main/Flow/SimpleFrontController.class.php: added SimpleFrontController
	this is one of the possible way to use FrontController in your application 

2013-10-21 Evgeny V. Kokovikhin
	
	* meta/bin/build.php meta/classes/MetaClassPUMLGenerator.class.php
	meta/classes/MetaConfiguration.class.php:  added schema generator for PlantUML
	see http://plantuml.sourceforge.net/classes.html

2013-10-17 Nikita V. Konstantinov

	* main/Flow/HttpRequest.class.php
	* main/Net/Http/HttpHeaderCollection.class.php
	* test/AllTests.php
	* test/main/Net/Http/HttpHeaderCollectionTest.class.php:
		added HttpHeaderCollection

2013-10-15 Nikita V. Konstantinov

	* main/Flow/HttpRequest.class.php:
		added HttpRequest::createFromGlobals()

2013-03-31  Nikita V. Konstantinov
	
	* core/Base/Singleton.class.php:
		Singleton 2+ constructor arguments now without eval

2013-01-09 Evgeny V. Kokovikhin
	* test/main/Utils/AMQP/AMQPPeclTest.class.php:
		test fixed

2012-12-06  Evgeny V. Kokovikhin
	* main/DAOs/GenericDAO.class.php 
		meta/builders/AutoDaoBuilder.class.php 
		meta/builders/BaseBuilder.class.php:
			dbLink became a property

2012-11-18  Nikita V. Konstantinov

	* meta/types/ObjectType.class.php:
		update for Business objects - now you can setSomeProperty(null)
		for Objects properties if it's not required

2012-09-26	Alexey S. Denisov

	* core/Form/Form.class.php:
		added to Form methods markMissing, markWrong, markCustom
		optional argument "label" to set it without calling special method add*Label

2012-09-18	Evgeniy Tekalin

	* main/Utils/AMQP/AMQP.class.php,
	main/Utils/AMQP/AMQPBaseChannel.class.php,